--- a/_includes/themes/dbyll/default.html
+++ b/_includes/themes/dbyll/default.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <!-- TradeDoubler site verification 2798083 -->
   <title>{{ page.title }}</title>
   {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
   <meta name="author" content="{{ site.author.name }}">
