--- a/_includes/themes/dbyll/default.html
+++ b/_includes/themes/dbyll/default.html
@@ -86,6 +86,8 @@
    <ul class="dropdown-menu" role="menu">
      <li><a href="{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}"><i class="fa fa-home"></i> Home</a></li>
      <li><a href="{{ BASE_PATH }}/About"><i class="fa fa-folder"></i> About</a></li>
+     <li><a href="{{ BASE_PATH }}/Activities"><i class="fa fa-folder"></i> Activities</a></li>
+     <li><a href="{{ BASE_PATH }}/Projects"><i class="fa fa-folder"></i> Projects</a></li>
      <li><a href="{{ BASE_PATH }}/Talks"><i class="fa fa-folder"></i> Talks</a></li>
      <li><a href="{{ BASE_PATH}}{{ site.JB.categories_path }}"><i class="fa fa-folder"></i> Categories</a></li>
      <li><a href="{{ BASE_PATH}}{{ site.JB.tags_path }}"><i class="fa fa-tags"></i> Tags</a></li>
