--- a/_includes/themes/dbyll/sidebar.html
+++ b/_includes/themes/dbyll/sidebar.html
@@ -33,7 +33,7 @@
 		{% if site.author.twitch %}
 		<li>
 			<a class="btn btn-default btn-sm" href="https://twitch.tv/{{ site.author.twitch }}">
-				<i class="fa fa-twitter fa-lg"></i>
+				<i class="fa fa-twitch fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
