--- a/assets/themes/dbyll/resources/font-awesome/css/font-awesome.css
+++ b/assets/themes/dbyll/resources/font-awesome/css/font-awesome.css
@@ -558,6 +558,9 @@
 .fa-bar-chart-o:before {
   content: "\f080";
 }
+.fa-twitch-square:before {
+  content: "\f081";
+}
 .fa-twitter-square:before {
   content: "\f081";
 }
@@ -627,6 +630,9 @@
 }
 .fa-phone-square:before {
   content: "\f098";
+}
+.fa-twitch:before {
+  content: "\f099";
 }
 .fa-twitter:before {
   content: "\f099";
