--- a/_includes/themes/dbyll/sidebar.html
+++ b/_includes/themes/dbyll/sidebar.html
@@ -16,13 +16,6 @@
 
 <div id="contact-list" class="text-center">
 	<ul class="list-unstyled list-inline">
-		{% if site.author.github %}
-		<li>
-			<a class="btn btn-default btn-sm" href="https://github.com/{{ site.author.github }}">
-				<i class="fa fa-github-alt fa-lg"></i>
-			</a>
-		</li>
-		{% endif %}
 		{% if site.author.twitter %}
 		<li>
 			<a class="btn btn-default btn-sm" href="https://twitter.com/{{ site.author.twitter }}">
@@ -44,6 +37,27 @@
 			</a>
 		</li>
 		{% endif %}
+		{% if site.author.linkedin %}
+		<li>
+			<a class="btn btn-default btn-sm" href="https://linkedin.com/in/{{ site.author.linkedin }}">
+				<i class="fa fa-linkedin fa-lg"></i>
+			</a>
+		</li>
+		{% endif %}
+		{% if site.author.youtube %}
+		<li>
+			<a class="btn btn-default btn-sm" href="https://www.youtube.com/c/{{ site.author.youtube }}">
+				<i class="fa fa-youtube fa-lg"></i>
+			</a>
+		</li>
+		{% endif %}
+		{% if site.author.github %}
+		<li>
+			<a class="btn btn-default btn-sm" href="https://github.com/{{ site.author.github }}">
+				<i class="fa fa-github-alt fa-lg"></i>
+			</a>
+		</li>
+		{% endif %}
 	</ul>
 	<ul id="contact-list-secondary" class="list-unstyled list-inline">
 		{% if site.author.pinterest %}
@@ -53,13 +67,7 @@
 			</a>
 		</li>
 		{% endif %}
-		{% if site.author.linkedin %}
-		<li>
-			<a class="btn btn-default btn-sm" href="https://linkedin.com/in/{{ site.author.linkedin }}">
-				<i class="fa fa-linkedin fa-lg"></i>
-			</a>
-		</li>
-		{% endif %}
+
 		<li>
 			<a class="btn btn-default btn-sm" href="{{ BASE_PATH }}{{ site.JB.rss_path }}">
 				<i class="fa fa-rss fa-lg"></i>
